// Copyright (c) 2010 Peter Klauser

option java_package = "com.googlecode.protobuf.pro.stream.logging";
option java_outer_classname = "StreamLogEntry";

// This is default, but it's nice to be explicit
option optimize_for = SPEED;

message Parameter {
	required string name = 1;
	required string value= 2;
}

enum TransferType {
	PUSH = 1;
	PULL = 2;
}

message StreamTransfer {
	required TransferType transferType = 1; // push or pull
	required string requestType = 2; // protoType of the push or pull
	required int32 duration = 3; // milliseconds
	required string server = 4;
	required string client = 5;
	required int32 corId = 6;
	optional string error = 7;
	required int64 startTS = 8; // timestamp of transfer start
	optional int32 sizeBytes = 9;
	repeated Parameter parameter = 10; 
}

